dist_man1_MANS=

if BUILD_ORIOND
  dist_man1_MANS+=oriond.1
endif

if ENABLE_QT
  dist_man1_MANS+=orion-qt.1
endif

if BUILD_ORION_CLI
  dist_man1_MANS+=orion-cli.1
endif

if BUILD_ORION_TX
  dist_man1_MANS+=orion-tx.1
endif

if BUILD_ORION_UTIL
  dist_man1_MANS+=orion-util.1
endif

if ENABLE_WALLET
if BUILD_ORION_WALLET
  dist_man1_MANS+=orion-wallet.1
endif
endif
